--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
 <head>
   <meta charset="utf-8">
   <title>Mi sitio</title>
-  <link rel="stylesheet" href="estilos.css">
+  <style>
+    body {
+      font-family: sans-serif;
+      margin: 2em;
+    }
+    nav a {
+      margin-right: 10px;
+      text-decoration: none;
+      color: #333;
+    }
+  </style>
 </head>
 <body>
   <nav>
