--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Accueil - Assistante Sociale</title>
+  <title>Contact - Assistante Sociale</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
@@ -17,18 +17,19 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link active" href="index.html">Accueil</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html">Accueil</a></li>
         <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
 <div class="container mt-4">
-  <h1>Assistante sociale indépendante</h1>
-  <h3>Consultante en travail social</h3>
-  <p>Bienvenue sur le site de Mme Amélie Barteau, travailleuse sociale diplômée d’État.</p>
+  <h1>Contact</h1>
+  <p><strong>Mme Amélie Barteau</strong></p>
+  <p>Téléphone : 02 61 69 07 12</p>
+  <p>Email : <a href="mailto:contact.ab.social@gmail.com">contact.ab.social@gmail.com</a></p>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
