--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="profile" href="http://gmpg.org/xfn/11">
 
-	<title>Amélie Barteau | Assitente Sociale</title>
+	<title>Amélie Barteau | Assistante Sociale</title>
 <meta name="robots" content="max-image-preview:large">
 	<style>img:is([sizes="auto" i], [sizes^="auto," i]) { contain-intrinsic-size: 3000px 1500px }</style>
-	<link rel="alternate" type="application/rss+xml" title="Amélie Barteau | Assitente Sociale » Feed" href="https://javisch27.github.io/ABS/feed/">
-<link rel="alternate" type="application/rss+xml" title="Amélie Barteau | Assitente Sociale » Feed de los comentarios" href="https://javisch27.github.io/ABS/comments/feed/">
+	<link rel="alternate" type="application/rss+xml" title="Amélie Barteau | Assistante Sociale » Feed" href="https://javisch27.github.io/ABS/feed/">
+<link rel="alternate" type="application/rss+xml" title="Amélie Barteau | Assistante Sociale » Feed de los comentarios" href="https://javisch27.github.io/ABS/comments/feed/">
 <script type="text/javascript">
 /* <![CDATA[ */
 window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/16.0.1\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/16.0.1\/svg\/","svgExt":".svg","source":{"concatemoji":"https:\/\/javisch27.github.io/ABS\/wp-includes\/js\/wp-emoji-release.min.js?ver=6.8.3"}};
@@ -417,7 +417,7 @@ margin: 0 auto;
 				</div>
 				<div class="elementor-element elementor-element-b9bccaa elementor-widget elementor-widget-text-editor" data-id="b9bccaa" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-									<h3><span style="color: #ffffff;">&nbsp;</span></h3><h3><span style="color: #ffffff;">Assitente Sociale&nbsp;</span></h3>								</div>
+									<h3><span style="color: #ffffff;">&nbsp;</span></h3><h3><span style="color: #ffffff;">Assistante Sociale&nbsp;</span></h3>								</div>
 				</div>
 				<div class="elementor-element elementor-element-be5e841 elementor-align-center elementor-widget elementor-widget-button" data-id="be5e841" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;none&quot;}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
