--- a/index.html
+++ b/index.html
@@ -434,7 +434,8 @@ margin: 0 auto;
 
 			<div class="d-flex justify-content-end col-md-8">
 				<nav id="site-navigation" class="main-navigation" style="top: auto;">
-					<div class="menu-enlaces-rapidos-container"><ul id="primary-menu" class="menu"><li id="menu-item-410" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-410"><a href="https://javisch27.github.io/ABS/#intro" aria-current="page">Accueil</a></li>
+					<div class="menu-enlaces-rapidos-container"><ul id="primary-menu" class="menu"><li id="menu-item-410" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-410"><a href="https://javisch27.github.io/ABS/#accueil" aria-current="page">Accueil</a></li>
+<li id="menu-item-500" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-500"><a href="https://javisch27.github.io/ABS/#presentation" aria-current="page">Présentation</a></li>
 <li id="menu-item-372" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-372"><a href="https://javisch27.github.io/ABS/#servicios" aria-current="page">Services</a></li>
 <li id="menu-item-278" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-278"><a href="https://www.linkedin.com/in/am%C3%A9lie-barteau-6181a5116?trk=contact-info" target="_blank">CV</a></li>
 <li id="menu-item-370" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-370"><a href="https://javisch27.github.io/ABS/#contacto" aria-current="page">Contact</a></li>
@@ -454,7 +455,10 @@ margin: 0 auto;
 
 									<div data-elementor-type="wp-post" data-elementor-id="203" class="elementor elementor-203">
 						<section class="elementor-section elementor-top-section elementor-element elementor-element-5cb8b6d elementor-section-height-min-height elementor-section-boxed elementor-section-height-default elementor-section-items-middle" data-id="5cb8b6d" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;video&quot;,&quot;background_video_link&quot;:&quot;https:\/\/videos.pexels.com\/video-files\/7710447\/7710447-hd_1366_720_25fps.mp4&quot;}">
-								<div class="elementor-background-video-container" aria-hidden="true">
+							<div class="elementor-widget-container">
+								<div class="elementor-menu-anchor" id="accueil"></div>
+							</div>		
+							<div class="elementor-background-video-container" aria-hidden="true">
 													<video class="elementor-background-video-hosted" autoplay="" muted="" playsinline="" loop="" src="https://videos.pexels.com/video-files/7710447/7710447-hd_1366_720_25fps.mp4" style="width: 1520.8px; height: 855.45px;"></video>
 											</div>
 									<div class="elementor-background-overlay"></div>
@@ -485,13 +489,13 @@ margin: 0 auto;
 					</div>
 		</section>
 				<section class="elementor-section elementor-top-section elementor-element elementor-element-fbc8976 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="fbc8976" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
+					<div class="elementor-widget-container">
+								<div class="elementor-menu-anchor" id="presentation"></div>
+							</div>
 						<div class="elementor-container elementor-column-gap-wide">
 					<div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-f591a66" data-id="f591a66" data-element_type="column">
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-8071021 elementor-widget elementor-widget-menu-anchor" data-id="8071021" data-element_type="widget" data-widget_type="menu-anchor.default">
-				<div class="elementor-widget-container">
-							<div class="elementor-menu-anchor" id="intro"></div>
-						</div>
 				</div>
 				<div class="elementor-element elementor-element-097b9aa elementor-widget elementor-widget-heading" data-id="097b9aa" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
