--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@ margin: 0 auto;
 				</div>
 				<div class="elementor-element elementor-element-5eb3b73 elementor-widget elementor-widget-text-editor" data-id="5eb3b73" data-element_type="widget" data-widget_type="text-editor.default" style="text-align: justify; max-width: 900px; margin: 0 auto;"> 
 				<div class="elementor-widget-container">
-									<p>Assistante sociale diplômée d’État depuis 2011, j’ai travaillé dans tous les domaines du travail social et exercé dans plusieurs régions, notamment en Île-de-France, en Normandie et en Loire-Atlantique.</p>								
+									<br><p>Assistante sociale diplômée d’État depuis 2011, j’ai travaillé dans tous les domaines du travail social et exercé dans plusieurs régions, notamment en Île-de-France, en Normandie et en Loire-Atlantique.</p>								
 									<p>Aujourd’hui installée en exercice libéral à Granville (Manche), j’accompagne les particuliers, les salariés d’entreprises, les associations, les établissements de santé et les organismes publics dans la résolution de leurs difficultés sociales, administratives, familiales ou professionnelles.</p>	
 									<p>Je propose des permanences physiques et téléphoniques, ainsi que des entretiens individuels en présentiel, par téléphone ou en visioconférence. Les entretiens peuvent être réalisés en français, en espagnol ou en anglais.</p>	
 									<p>Secteurs d’intervention : Manche, Calvados, Orne, Ille-et-Vilaine, Mayenne (selon les secteurs), et accompagnement à distance sur l’ensemble du territoire.</p>	
