--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@ margin: 0 auto;
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-6f6e030 elementor-widget elementor-widget-heading" data-id="6f6e030" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-					<h2 class="elementor-heading-title elementor-size-default"><br>AB Social</h2>				</div>
+					<h2 class="elementor-heading-title elementor-size-default"><br><br>AB Social</h2>				</div>
 				</div>
 				<div class="elementor-element elementor-element-b9bccaa elementor-widget elementor-widget-text-editor" data-id="b9bccaa" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
